--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="search_title">Search for books,users</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title">Books trending now</string>
-    <string name="send">Send</string>
+    <string name="send">Send Message</string>
 </resources>
